--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ nav ul li{
 
 #myProgressBar{
     width: 80vw;
+    cursor: pointer;
 }
 
 .songItem{
@@ -108,6 +109,7 @@ nav ul li{
 }
 
 .songInfo{
+    font-family: 'Rubik',sans-serif;
     position: absolute;
     left: 10vw;
 }
@@ -115,4 +117,10 @@ nav ul li{
 .songInfo img{
     opacity: 0;
     transition: opacity 1s ease-in;
+}
+
+#playBtn{
+    background-color: black;
+    color: white;
+    padding: 8px;
 }
