--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color: antiquewhite;
+    background-color: #64dfdf;
 }
 
 nav{
@@ -28,7 +28,7 @@ nav ul li{
 }
 
 .brand img{
-    width: 60px;
+    width: 53px;
     padding: 0 8px;
 }
 
@@ -50,12 +50,12 @@ nav ul li{
     width: 70%;
     margin: 23px auto;
     padding: 34px;
-    background-image: url(bg.jpg);
+    background-image: url(https://images.unsplash.com/uploads/1412282232015a06e258a/4bdd2a58?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 }
 
 .bottom{
     position: sticky;
-    height: 130px;
+    height: 120px;
     background-color: black;
     color: white;
     bottom: 0;
@@ -123,4 +123,24 @@ nav ul li{
     background-color: black;
     color: white;
     padding: 8px;
+    border: none;
+    cursor: pointer;
+
+}
+
+.songItemPlayBtn{
+    background-color: white;
+    padding: 2px;
+    border-radius: 9px;
+    border: none;
+    cursor: pointer;
+}
+
+#next,#previous{
+    background-color: black;
+    color: white;
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+
 }
